--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@baiano/github-calendar",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Embed your GitHub contributions calendar anywhere.",
   "main": "lib/index.js",
   "directories": {
@@ -35,9 +35,7 @@
   },
   "homepage": "https://github.com/Bloggify/github-calendar#readme",
   "dependencies": {
-    "add-subtract-date": "^1.0.15",
-    "elly": "^1.1.11",
-    "formatoid": "^1.2.4"
+    "add-subtract-date": "^1.0.15"
   },
   "blah": {
     "example": [
