--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@baiano/github-calendar",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Embed your GitHub contributions calendar anywhere.",
   "main": "lib/index.js",
   "directories": {
     "example": "example"
   },
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "dist-it lib/index.js github-calendar.min.js",
